--- a/_styles/-theme.scss
+++ b/_styles/-theme.scss
@@ -27,9 +27,9 @@
 
 :root {
   // font families
-  --title: "Barlow", sans-serif;
-  --heading: "Barlow", sans-serif;
-  --body: "Barlow", sans-serif;
+  --title: "Rubik", sans-serif;
+  --heading: "Rubik", sans-serif;
+  --body: "Rubik", sans-serif;
   --code: "Roboto Mono", monospace;
 
   // font sizes
