--- a/_styles/-theme.scss
+++ b/_styles/-theme.scss
@@ -3,15 +3,15 @@
 
 // colors
 [data-dark="false"] {
-  --primary: #0795d9;
-  --secondary: #7dd3fc;
+  --primary: #446BD0;
+  --secondary: #AAC2FF;
   --text: #000000;
-  --background: #ffffff;
-  --background-alt: #fafafa;
-  --light-gray: #e0e0e0;
+  --background: #fafafa;
+  --background-alt: #F4EDE2;
+  --light-gray: #F8C600;
   --gray: #808080;
-  --dark-gray: #404040;
-  --overlay: #00000020;
+  --dark-gray: #b0b0b0;
+  --overlay: #038C74;
 }
 [data-dark="true"] {
   --primary: #0795d9;
