--- a/_styles/header.scss
+++ b/_styles/header.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-$logo-big: 80px;
+$logo-big: 100px;
 $logo: 40px;
 $big-padding: 100px;
 $collapse: 700px;
@@ -63,8 +63,8 @@ header a {
 }
 
 .subtitle {
-  opacity: 0.65;
-  font-weight: var(--thin);
+  font-weight: var(--semi-bold);
+  line-height: 1.2;
 }
 
 .nav-toggle {
