--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -11,20 +11,21 @@
 <div class="citation-container">
   <div class="citation">
     {% if include.style == "rich" %}
-      <a
-        {% if citation.link %}
-          href="{{ citation.link | relative_url | uri_escape }}"
-        {% endif %}
-        class="citation-image"
-        aria-label="{{ citation.title | default: "citation link" | regex_strip }}"
-      >
+      {% if citation.image %}
+        <a
+          {% if citation.link %}
+            href="{{ citation.link | relative_url | uri_escape }}"
+          {% endif %}
+          class="citation-image"
+          aria-label="{{ citation.title | default: "citation link" | regex_strip }}"
+        >
         <img
           src="{{ citation.image | relative_url | uri_escape }}"
           alt="{{ citation.title | default: "citation image" | regex_strip }}"
           loading="lazy"
           {% include fallback.html %}
-        >
-      </a>
+        ></a>
+        {% endif %}      
     {% endif %}
 
     <div class="citation-text">
