--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -68,10 +68,12 @@
         <span class="citation-date">
           {{- citation.date | default: "[no date info]" | date: "%d %b %Y" -}}
         </span>
+        {% if citation.id != "" %}
         &nbsp;·&nbsp;
         <span class="citation-id">
-          {{- citation.id | default: "[no id info]" -}}
+          {{- citation.id | default: "" -}}
         </span>
+        {% endif %}
       </div>
 
       {% if include.style == "rich" %}
