adds google analytics stuff

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,3 +1,11 @@
 <!--
   put your analytics (e.g. Google Analytics) tracking code here
 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2SD311FV8E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2SD311FV8E');
+</script>
