--- a/_includes/verification.html
+++ b/_includes/verification.html
@@ -1,3 +1,4 @@
 <!--
   put your search engine verification (e.g. Google Search Console) tag here
 -->
+google-site-verification=LP5lJ7AhO4dOV-uHk_jw_0S0Dw5_jucNBe5YaFjt59g
