--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
   <div>
     &copy; {{ site.time | date: "%Y" }}
     {{ site.title }}
-    &nbsp; | &nbsp; Built with
+    <br>Built with
     <a href="https://github.com/greenelab/lab-website-template">
       Lab Website Template
     </a>
