--- a/_styles/portrait.scss
+++ b/_styles/portrait.scss
@@ -11,7 +11,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 20px;
+  margin: 40px;
   width: 175px;
   max-width: calc(100% - 20px - 20px);
   text-decoration: none;
@@ -69,6 +69,7 @@
 .portrait-name {
   font-family: var(--heading);
   font-weight: var(--semi-bold);
+  color: var(--text);
 }
 
 .portrait[data-style="tiny"] {
