--- a/_styles/tags.scss
+++ b/_styles/tags.scss
@@ -22,6 +22,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  font-size: 0.8em;
   transition: background var(--transition), color var(--transition);
 }
 
