updates theme to match logo

--- a/_styles/heading.scss
+++ b/_styles/heading.scss
@@ -15,9 +15,9 @@ h6 {
 }
 
 h1 {
-  margin: 40px 0;
+  margin: 40px 60px;
   font-size: 1.6rem;
-  font-weight: var(--regular);
+  font-weight: var(--semi-bold);
   text-transform: uppercase;
   text-align: center;
 }
@@ -26,7 +26,7 @@ h2 {
   font-size: 1.6rem;
   padding-bottom: 5px;
   border-bottom: solid 1px var(--light-gray);
-  font-weight: var(--regular);
+  font-weight: var(--semi-bold);
 }
 
 h3 {
