--- a/_styles/-theme.scss
+++ b/_styles/-theme.scss
@@ -27,9 +27,9 @@
 
 :root {
   // font families
-  --title: "Rubik", sans-serif;
-  --heading: "Rubik", sans-serif;
-  --body: "Rubik", sans-serif;
+  --title: "DM Sans Black", sans-serif;
+  --heading: "DM Sans Black", sans-serif;
+  --body: "DM Sans", sans-serif;
   --code: "Roboto Mono", monospace;
 
   // font sizes
@@ -39,9 +39,9 @@
 
   // font weights
   --thin: 200;
-  --regular: 400;
-  --semi-bold: 500;
-  --bold: 600;
+  --regular: 450;
+  --semi-bold: 550;
+  --bold: 900;
 
   // text line spacing
   --spacing: 1.75;
