--- a/_styles/list.scss
+++ b/_styles/list.scss
@@ -3,8 +3,8 @@
 
 ul,
 ol {
-  margin: 20px 0;
-  padding-left: 40px;
+  margin: 10px 0;
+  padding-left: 80px;
 }
 
 ul {
@@ -14,6 +14,7 @@ ul {
 li {
   margin: 0px 0;
   padding-left: 5px;
+  padding-right: 80px;
   text-align: left;
   line-height: var(--spacing);
 
