--- a/_styles/paragraph.scss
+++ b/_styles/paragraph.scss
@@ -6,3 +6,9 @@ p {
   text-align: left;
   line-height: var(--spacing);
 }
+
+@media (max-width: 569px) { /* Makes p font smaller when screen is smaller */
+  p {
+    margin: 20px 0px;
+  }
+}
